# current_semver

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
example/: Cargo.toml
example/src/: main.rs
src/: current_major.rs  lib.rs
