[package]
name = "current_semver"
version = "0.1.1"
edition = "2021"
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Get the current semver type from the environment"
keywords = [ "proc_macro", "semver", "version"]
repository= "https://github.com/wyatt-herkamp/current_semver"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2",features = ["full"] }

